scss/partials/_all_posts.scss
div.all-posts {
  width: 895px;
  margin-left: 16px;

  @include mobile() {
    width: 100%;
    margin-left: 0px;
  }

  div.all-posts-cards {
    float: left;
    width: 617px;

    @include mobile() {
      width: 100%;
      float: unset;
    }

    div.loading-updates {
      width: 100%;
      text-align: center;
      color: $oc_gray_7;
      margin-bottom: 16px;
      font-size: 14px;
      @include avenir_BOOKO();
    }

    div.all-posts-cards-inner {
      position: relative;

      div.activities-overlay {
        position: fixed;
        top: 82px;
        left: 50%;
        z-index: 1;
        height: calc(100vh - 82px);
        width: 667px;
        margin-left: -400px;
        background-color: $oc_gray_8;
        text-align: center;

        @include mobile() {
          width: 100%;
        }

        div.oc-loading {
          margin: 100px auto;
          height: 170px;
          div.oc-loading-inner {
            top: 110px;
          }
        }

        div.top-loading-message {
          top: 300px;
          position: absolute;
          width: 667px;
          color: rgba($oc_gray_7, 0.5);
          font-size: 16px;
          @include avenir_M();
          text-align: center;

          @include mobile() {
            width: 100%;
          }
        }
      }

      div.activity-card.all-posts-card {
        width: 617px;
        max-height: initial;
        margin: 0px 0px 20px 0px;

        @include mobile() {
          width: 100%;
        }

        div.activity-card-content {

          div.activity-card-body {
            max-height: #{24*6}px;

            &.has-body {
              height: initial;
            }
          }
        }
      }
    }

    div.load-next {
      text-align: center;
      margin-top: 24px;

      button.load-next {
        font-size: 16px;
        @include avenir_H();
      }
    }
  }

  div.all-posts-nav {
    float: right;
    width: 224px;
    position: relative;

    @include mobile() {
      display: none;
    }

    div.all-posts-nav-inner {
      position: fixed;
      overflow-y: auto;
      min-width: 150px;
      padding-right: 10px;

      div.nav-year span.retrieving, div.nav-month span.retrieving {
        width: 100%;
        text-align: center;
        color: $oc_gray_7;
        font-size: 13px;
        @include avenir_BOOKO();
        margin-left: 16px;
      }

      div.nav-year {
        margin-bottom: 4px;
        cursor: pointer;
        margin-top: 8px;

        &.selected span.calendar-label {
          color: $carrot_text_blue;
        }

        span.calendar-label {
          @include avenir_H();
          font-size: 16px;
          color: $oc_gray_7;
        }

        &:hover {
          span.calendar-label {
            text-decoration: underline;
          }
        }
      }

      div.nav-month {
        cursor: pointer;
        margin-left: 24px;
        position: relative;
        padding: 2px 0;

        span.calendar-label {
          @include avenir_M();
          font-size: 14px;
          color: $oc_gray_7;
        }

        &:hover {
          span.calendar-label {
            text-decoration: underline;
          }
        }

        &:before {
          font-family: FontAwesome;
          font-size: 9px;
          content: "\f10c";
          position: absolute;
          color: $oc_gray_7;
          top: 6px;
          left: -23px;
        }

        &.selected {
         span.calendar-label {
            color: $carrot_text_blue;
          }

          &:before {
            color: $carrot_text_blue;
            content: "\f111";
          }
        }

        &.selected{
          color: $carrot_text_blue;
          &:before {
            color: $carrot_text_blue;
            content: "\f111";
          }
        }
      }
    }
  }
}

